erDiagram
    direction LR

    phase_runs ||--o{ phase_output_items : "id -> run_id / ON DELETE CASCADE"
    phase_runs ||--o{ api_audit_events : "id -> run_id / ON DELETE SET NULL"

    phase_runs {
        int id PK "IDENTITY(1,1)"
        uniqueidentifier run_uuid UK "DEFAULT NEWID()"
        nvarchar user_name "NOT NULL"
        nvarchar phase_code "NOT NULL, CHECK PHASE_01..PHASE_04"
        nvarchar phase_name "NOT NULL"
        datetimeoffset executed_at "NOT NULL"
        nvarchar dataset_path "NULL"
        int rows_read "NULL"
        int stored_rows "NULL"
        int discarded_rows "NULL"
        int missing_departure_delay "NULL"
        int missing_arrival_delay "NULL"
        int missing_weather_delay "NULL"
        nvarchar input_options_json "NOT NULL, ISJSON"
        nvarchar result_summary "NOT NULL"
        nvarchar console_output "NULL"
        int item_count "NOT NULL, DEFAULT 0"
        datetimeoffset inserted_at "NOT NULL, DEFAULT SYSDATETIMEOFFSET()"
        nvarchar client_ip "NULL"
        nvarchar user_agent "NULL"
        nvarchar source_app "NULL"
    }

    phase_output_items {
        bigint id PK "IDENTITY(1,1)"
        int run_id FK "NOT NULL"
        int item_index "NOT NULL"
        nvarchar item_type "NULL"
        int flight_id "NULL"
        nvarchar tail_num "NULL"
        nvarchar airport_code "NULL"
        int airport_seq_id "NULL"
        nvarchar delay_kind "NULL"
        int delay_minutes "NULL"
        nvarchar reduction_column "NULL"
        nvarchar reduction_type "NULL"
        int reduction_value "NULL"
        int valid_count "NULL"
        nvarchar airport_kind "NULL"
        int airport_count "NULL"
        nvarchar bar_text "NULL"
        nvarchar raw_text "NULL"
        nvarchar item_json "NOT NULL, ISJSON"
        datetimeoffset inserted_at "NOT NULL, DEFAULT SYSDATETIMEOFFSET()"
    }

    api_audit_events {
        bigint id PK "IDENTITY(1,1)"
        nvarchar event_type "NOT NULL"
        int run_id FK "NULL"
        nvarchar method "NULL"
        nvarchar path "NULL"
        int status_code "NULL"
        nvarchar client_ip "NULL"
        nvarchar user_agent "NULL"
        nvarchar details_json "NULL, ISJSON si no es NULL"
        datetimeoffset created_at "NOT NULL, DEFAULT SYSDATETIMEOFFSET()"
    }
